added acknowlegement logos

--- a/index.html
+++ b/index.html
@@ -57,19 +57,20 @@
             <div class="row">
                 <div class="col-md-4">
                     <h3>Latest Headlines</h3>
-                    <div class="card " style="width: 100%;">
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">An item</li>
-                          <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>                     <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>                     <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>                     <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>                     <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>
-                        </ul>
-                        <div class="card-footer">
-                          Card footer
-                        </div>
+                    <div class="list-group">
+                        <a href="#" class="list-group-item list-group-item-action">A second link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A second link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A second link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A second link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+                        <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+
                       </div>
                 </div>
 
@@ -134,5 +135,58 @@
         </div>
     </section>
 
+
+    <footer class="p-5 bg-dark text-white">
+        <div class="container bg-dark">
+            <div class="row">
+                <div class="col-lg">
+                    <h5>
+                        About
+                    </h5>
+                    <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+                <div class="col-lg">
+                    <h5>
+                        Acknowledgements
+                    </h5>
+                    <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+                <div class="col-lg">
+                    <h5>
+                        Other Resources
+                    </h5>
+                    <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <footer class = "bg-light">
+        <div class="container text-center col-2">
+            <img src="Assets/Logos/CRISPER_Text.svg" alt="CRISPER LOGO"class="img-fluid ">
+        </div>
+        <div class="row">
+            <div class="col-5 mx-auto ">
+                <div class="row">
+                    <div class="col-lg">
+                        <img src="Assets/Logos/ANU_Logo_Colour.png" alt="ANU Logo" class="img-fluid">
+                    </div>
+                    <div class="col-lg">
+                        <img src="Assets/Logos/UQ_Logo_Colour.png" alt="UQ Logo" class="img-fluid">
+                    </div>
+                    <div class="col-lg">
+                        <img src="Assets/Logos/SoftwareInnovationInstitute.png" alt="SII Logo" class="img-fluid">
+                    </div>
+                    <div class="col-lg">
+                        <img src="Assets/Logos/APPRISE_logo.png" alt="APPRISE Logo" class="img-fluid">
+                    </div>
+                    <div class="col-lg">
+                        <img src="Assets/Logos/GRAPHC_Logo.png" alt="GRAPHC Logo" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </footer>
 </body>
 </html>
