--- a/contact_tracing_map.html
+++ b/contact_tracing_map.html
@@ -201,7 +201,7 @@
                                 +61 XXX XXXX
                             </li>
                             <li>
-                                insert.email@email.com
+                                support@crisper.net.au
                             </li>
                             <br>
                             <li>
@@ -267,7 +267,7 @@
             </div>
             <div class="modal-body">
 
-                <form action="mailto:email@email.com" method="get" enctype="text/plain">
+                <form action="mailto:support@crisper.net.au" method="get" enctype="text/plain">
                     <div class="form-floating mb-3">
                         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                         <label for="floatingInput">Email address</label>
