--- a/dashboards.html
+++ b/dashboards.html
@@ -22,7 +22,7 @@
     <!-- ---------------------- -->
     <!-- NAVIGATION BAR -->
     <!-- ---------------------- -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-warning border-4">
         <div class="container">
             <div class="col-lg-3">
                 <a href="index.html" class="navbar-brand">
@@ -145,7 +145,7 @@
     </section>
 
 
-    <footer class="p-5 bg-dark text-white">
+    <footer class="p-5 bg-dark text-white border-top border-warning border-4">
 
         <!-- ---------------------------- -->
         <!-- Footer Content -->
@@ -201,7 +201,7 @@
                                 +61 XXX XXXX
                             </li>
                             <li>
-                                insert.email@email.com
+                                support@crisper.net.au
                             </li>
                             <br>
                             <li>
@@ -267,7 +267,7 @@
             </div>
             <div class="modal-body">
 
-                <form action="mailto:email@email.com" method="get" enctype="text/plain">
+                <form action="mailto:support@crisper.net.au" method="get" enctype="text/plain">
                     <div class="form-floating mb-3">
                         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                         <label for="floatingInput">Email address</label>
