updated headers and nav bar and tweaked a bit of the data engine page

--- a/data_engine.html
+++ b/data_engine.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
 
     <title>CRISPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
-    <link rel="shortcut icon" type="image/jpg" href="Assets/Logos/CRISPER Logo Only_Square.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="Assets/Logos/SoftwareInnovationInstitute.png"/>
 </head>
 
 <body>
@@ -49,10 +49,10 @@
                         <a href="automated_alerts.html" class="nav-link">Automated Alerts</a>
                     </li>
                     <li class="nav-item">
-                        <a href="data_engine.html" class="nav-link">Data Engine</a>
+                        <a href="dashboards.html" class="nav-link">Dashboards</a>
                     </li>
                     <li class="nav-item">
-                        <a href="dashboards.html" class="nav-link">Dashboards</a>
+                        <a href="data_engine.html" class="nav-link">Data Engine</a>
                     </li>
                 </ul>
             </div>
@@ -86,7 +86,7 @@
             <div class="row row-cols-1 row-cols-md-3 g-4">
 
                 <div class="col-md">
-                        <a href="https://data.crisper.net.au/schema" class="card h-100 my-1 text-decoration-none border-0 bg-dark text-white" style="width: 100%;">
+                        <a href="https://data.crisper.net.au/schema" class="card h-100 my-1 text-decoration-none  border border-5 border-dark text-dark" style="width: 100%;">
                             <div class="card-body text-center">
                                 <span class="fa-stack fa-3x m-4">
                                     <i class="fa fa-square fa-stack-2x text-warning"></i>
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="col-md">
-                    <a href="https://data.crisper.net.au/tables" class="card h-100 my-1 text-decoration-none border-0 bg-dark text-white " style="width: 100%;">
+                    <a href="https://data.crisper.net.au/tables" class="card h-100 my-1 text-decoration-none  border border-5 border-dark text-dark " style="width: 100%;">
                         <div class="card-body text-center">
                             <span class="fa-stack fa-3x m-4">
                                 <i class="fa fa-square fa-stack-2x text-warning"></i>
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="col-md">
-                    <a href="https://data.crisper.net.au/status" class="card h-100 my-1 text-decoration-none border-0 bg-dark text-white"  style="width: 100%;">
+                    <a href="https://data.crisper.net.au/status" class="card h-100 my-1 text-decoration-none border border-5 border-dark text-dark"  style="width: 100%;">
                         <div class="card-body text-center">
                             <span class="fa-stack fa-3x m-4">
                                 <i class="fa fa-square fa-stack-2x text-warning"></i>
@@ -170,10 +170,23 @@
                     <h6>
                         About
                     </h6>
-                    <p>
+                    <p class="text-justify">
                         <small>
-                            Our focus is on the delivery of notifications of situation updates to users, who may include the general public, GP practices, epidemiologists, and other health professionals. 
-                            Daily emailed automated alerts can be managed here and mobile notifications will be supported through our native smart phone App.
+                            The COVID-19 Real-time Information System for Preparedness and Epidemic Response (CRISPER) has been developed to provide accurate and 
+                            spatially explicit real-time information for COVID-19 cases and contact tracing locations in Australia. The system comprises three main components: 
+                            <ul>
+                                <li>
+                                    Data Engine
+                                </li>
+                                <li>
+                                    Data Visualisation and Interactive Mapping Tools
+
+                                </li>
+                                <li>
+                                    Automatic Alert System
+                                </li>
+                            </ul>
+                            This system provides integrated data from multiple sources in one platform which optimises information sharing with public health responders, primary health care practitioners and the general public.
                         </small>
                     </p>
                 </div>
@@ -181,7 +194,7 @@
                     <h6>
                         Acknowledgements
                     </h6>
-                    <p><small>
+                    <p class="text-justify"><small>
                         Developed by:
                         <ul>
                             <li>
@@ -201,7 +214,7 @@
                             </li>
                         </ul>                    
                         ANU Software Innovation Institute software engineers, designers, and data scientists include: <br> 
-                        Graham Williams, Jingjing Shi, Haotian Weng, Alex Sneddon, Mike Purcell, Kieran Ricardo, Jess Moore, and Mark Burgess.
+                        Graham Williams, Jingjing Shi, Haotian Weng, Alex Sneddon, Mike Purcell, Kieran Ricardo, Jess Moore, Mark Burgess, Septian Razi and Zeyu Gao.
                     </small> </p>
                 </div>
                 <div class="col-lg mx-4">
@@ -211,7 +224,7 @@
                     <small>
                         <ul class = "list-unstyled">
                             <li>
-                                +61 XXX XXXX
+                                +61 2 6125 3195
                             </li>
                             <li>
                                 support@crisper.net.au
@@ -268,6 +281,7 @@
         </div>
 
     </footer>
+    
 
 
     <!-- Modal -->
