updated automated_alerts website look

--- a/dashboards.html
+++ b/dashboards.html
@@ -73,12 +73,14 @@
                                             <img src="https://www.arcgis.com/sharing/rest/content/items/02d54f961ba94f1bb4d531a7d321b283/resources/images/templates/1624505049179.jpeg" >
                                         </div>
                                         <div class="card-body">
-                                        <h5 class="card-title">CRISPER Contact Tracing Alerts Web App</h5>
+                                        <h4 class="card-title">CRISPER Contact Tracing Alerts Web App</h4>
 
                                         <p class="card-text">
-                                            This Web App gathers Exposure Site information from multiple State Government sites and presents the locations on a map.  It may not include the full detail provided by State Governments, and there may be a lag between the time the data is published by the State Government and when it appears on the map.  Some map locations may not be precise due to limited address information or for other reasons.  To find the most recent, complete and authoritative data, please visit the appropriate State Government website. 
-                                            <br>
-                                            Click on the links below to be taken to the pertinent government sites: 
+                                            This Web App gathers Exposure Site information from multiple State Government sites and presents the locations on a map.  
+                                            It may not include the full detail provided by State Governments, and there may be a lag between the time the data is published by the State Government and when it appears on the map.  
+                                            Some map locations may not be precise due to limited address information or for other reasons.  
+                                            To find the most recent, complete and authoritative data, please visit the appropriate State Government website:
+
                                             <ul>
                                                 <li>
                                                     ACT
@@ -121,7 +123,7 @@
                                         <img title="Interactive Mapping Cases By Postcode (NSW ony)" src="https://www.arcgis.com/sharing/rest/content/items/02d54f961ba94f1bb4d531a7d321b283/resources/images/widget_314/1624502624993.png" alt="Interactive Mapping Cases By Postcode (NSW ony)">
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Interactive Mapping Cases By Postcode</h5>
+                                      <h4 class="card-title">Interactive Mapping Cases By Postcode</h4>
                                       <p class="card-text">
                                         COVID-19 Cases by Postcode and Date 
                                         <br><br>
@@ -144,7 +146,7 @@
                                         <img title="Interactive Mapping  Tests by Postcode (NSW only) &amp; Contact Tracing Locations" src="https://www.arcgis.com/sharing/rest/content/items/02d54f961ba94f1bb4d531a7d321b283/resources/images/widget_317/1624503507181.png" class="w-100 h-100" alt="Interactive Mapping Tests by Postcode (NSW only) &amp; Contact Tracing Locations" style="display: block; object-fit: cover; object-position: 50% 50%;">
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Interactive Mapping Tests by Postcode & Contact Tracing Locations</h5>
+                                      <h4 class="card-title">Interactive Mapping Tests by Postcode & Contact Tracing Locations</h4>
                                       <p class="card-text">COVID-19 Test by Postcode and Date Including Contact Tracing Alerts.
 
 
@@ -169,7 +171,7 @@
                                         <img title="CRISPER National Summary Dashboard" src="https://www.arcgis.com/sharing/rest/content/items/02d54f961ba94f1bb4d531a7d321b283/resources/images/widget_319/1624504251013.png" class="w-100 h-100" alt="CRISPER National Summary Dashboard" style="display: block; object-fit: cover; object-position: 50% 50%;">
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">CRISPER National Summary Dashboard</h5>
+                                      <h4 class="card-title">CRISPER National Summary Dashboard</h4>
                                       <p class="card-text">Data sourced from State Government official datasets where available, 
                                           and from  https://www.covid19data.com.au/
                                           where state data is not available. Dashboard statistics are generally updated within 3 hours of changes to the source data.</p>
@@ -184,7 +186,7 @@
                                         <img src="https://www.arcgis.com/sharing/rest/content/items/02d54f961ba94f1bb4d531a7d321b283/resources/images/templates/1624505621145.jpeg" >
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">NSW COVID-19 Cases by PHU</h5>
+                                      <h4 class="card-title">NSW COVID-19 Cases by PHU</h4>
                                       <p class="card-text">This dasboard reflects data publicly released by the NSW government. Dashboard data is generally updated within 3 hours of changes to the NSW government datasets.</p>
                                       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                     </div>
