--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
 
                         <br>
                         <br>
-                        <a href="https://covid19nearme.com.au/" class="list-group-item list-group-item-action">COVID-19 Near Me</a>
-                        <a href="https://www.covid19data.com.au/" class="list-group-item list-group-item-action">COVID-19 Data</a>
-                        <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" class="list-group-item list-group-item-action">Department of Health</a>
+                        <a href="https://covid19nearme.com.au/" class="list-group-item list-group-item-action" target="_blank">COVID-19 Near Me</a>
+                        <a href="https://www.covid19data.com.au/" class="list-group-item list-group-item-action" target="_blank">COVID-19 Data</a>
+                        <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" class="list-group-item list-group-item-action" target="_blank">Department of Health</a>
+                        <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" class="list-group-item list-group-item-action" target="_blank">World Health Organisation</a>
+
 
                       </div>
                 </div>
