--- a/automated_alerts.html
+++ b/automated_alerts.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="contact_tracing_map.html" class="nav-link">Contact Tracing Map</a>
+                        <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="nav-link">Contact Tracing Map</a>
                     </li>                
                     <li class="nav-item">
                         <a href="automated_alerts.html" class="nav-link">Automated Alerts</a>
@@ -96,12 +96,12 @@
         </div>
     </section> -->
 
-    <section  class="p-5">
+    <section  class="p-md-5 m-md-5">
         <div class="container">
-            <div class="row row-cols-1 row-cols-md-3">
+            <div class="row row-cols-1 row-cols-md-3 py-5">
 
-                    <div class="col-md text-center">
-                        <a class="btn btn-warning btn-lg col-8" href="#" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Register an email for sending alerts">
+                    <div class="col-md text-center my-3">
+                        <a class="btn btn-warning btn-lg col-8" href="https://crisper.net.au/user/register" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Register an email for sending alerts">
                             <b> 
                             Register 
                             </b>
@@ -109,16 +109,16 @@
                     </div>
 
 
-                    <div class="col-md text-center">
-                        <a class="btn btn-warning btn-lg col-8" href="#" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Manage the alerts you recieve"> <b>
+                    <div class="col-md text-center my-3">
+                        <a class="btn btn-warning btn-lg col-8" href="https://crisper.net.au/alerts" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Manage the alerts you recieve"> <b>
                                 Manage
                             </b>
                         </a>
                     </div>
 
 
-                    <div class="col-md text-center">
-                        <a class="btn btn-warning btn-lg col-8" href="#" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title=" Explore alerts without having to register/login."> <b>
+                    <div class="col-md text-center my-3">
+                        <a class="btn btn-warning btn-lg col-8" href="https://crisper.net.au/demo" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title=" Explore alerts without having to register/login."> <b>
                                 Demo
                             </b> 
                         </a>
@@ -130,7 +130,7 @@
         </div>
     </section>
 
-    <hr class="col-8 mx-auto text-warning border border-3 border-warning">
+    <hr class="col-10 mx-auto text-warning border border-3 border-warning">
 
     <section  class="p-5 ">
         <div class="container">
