--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="contact_tracing_map.html" class="nav-link">Contact Tracing Map</a>
+                        <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="nav-link">Contact Tracing Map</a>
                     </li>                
                     <li class="nav-item">
                         <a href="automated_alerts.html" class="nav-link">Automated Alerts</a>
@@ -66,8 +66,8 @@
                 <div class="col-md-4">
                     <h3>Quick Links</h3>
                     <div class="list-group list-group-flush">
-                        <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Contact Tracing Map</a>
-                        <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a>
+                        <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Contact Tracing Map</a>
+                        <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a>
                         <a href="automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
                         <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
                         <a href="dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
@@ -88,7 +88,7 @@
                         <div class="row row-cols-1 row-cols-md-2 g-4">
 
                             <div class="col-md-6 col-sm-12">
-                                    <a href="contact_tracing_map.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                    <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                         <div class="ratio ratio-16x9">
                                             <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                                         </div>
