--- a/data_engine.html
+++ b/data_engine.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="contact_tracing_map.html" class="nav-link">Contact Tracing Map</a>
+                        <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="nav-link">Contact Tracing Map</a>
                     </li>                
                     <li class="nav-item">
                         <a href="automated_alerts.html" class="nav-link">Automated Alerts</a>
@@ -179,7 +179,7 @@
 
     <hr class="col-8 mx-auto text-warning border border-3 border-warning">
 
-    
+
     <section  class="p-5 ">
         <div class="container">
             <div class="row align-items-center">
