Add temporary links to demo etc during testing.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
                         <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" class="list-group-item list-group-item-action" target="_blank">Department of Health</a>
                         <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" class="list-group-item list-group-item-action" target="_blank">World Health Organisation</a>
 
+		      <!-- 20210715 gjw TEMPORY LINKS -->
+		      
+ <a href="https://dev.crisper.net.au/demo">Demo</a>
+ <a href="https://dev.crisper.net.au/user/register">Register</a>
+ <a href="https://dev.crisper.net.au/alerts">Manage</a>
+
 
                       </div>
                 </div>
