Fine tune in preparation for MVP release.

--- a/contact_tracing_map.html
+++ b/contact_tracing_map.html
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="nav-link">Contact Tracing Map</a>
+                         <a href="contact_tracing_map.html" class="nav-link">Contact Tracing Map</a>
                     </li>                
                     <li class="nav-item">
                         <a href="automated_alerts.html" class="nav-link">Automated Alerts</a>
@@ -61,9 +61,14 @@
     <!-- ARC GIS  -->
     <!-- ---------------------- -->
     <section class="p-5">
-        ARCGIS MAP CANVAS HERE
-        <br>
-        <img src="Assets/Contact Tracing.png" alt="">
+	<br>
+	<iframe
+	src="https://mobile.crisper.net.au"
+	title="Contact Tracing Map"
+	height="800" width="800">
+	</iframe>
+        <!--img src="Assets/Contact Tracing.png" alt=""-->
+
     </section>
 
 
@@ -133,7 +138,7 @@
                     <small>
                         <ul class = "list-unstyled">
                             <li>
-                                +61 2 6125 3195
+                                
                             </li>
                             <li>
                                 support@crisper.net.au
