--- a/data_engine.html
+++ b/data_engine.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-warning border-4">
         <div class="container">
             <div class="col-lg-3">
-                <a href="index.html" class="navbar-brand">
+                <a href="/" class="navbar-brand">
                     <img src="Assets/Logos/CRISPER_Text_White.svg" alt="CRISPER LOGO WHITE" srcset="" class="img-fluid">
                 </a>
             </div>
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="nav-link">Contact Tracing Map</a>
+                         <a href="contact_tracing_map.html" class="nav-link">Contact Tracing Map</a>
                     </li>                
                     <li class="nav-item">
                         <a href="automated_alerts.html" class="nav-link">Automated Alerts</a>
@@ -273,7 +273,7 @@
                     <small>
                         <ul class = "list-unstyled">
                             <li>
-                                +61 2 6125 3195
+                                
                             </li>
                             <li>
                                 support@crisper.net.au
