--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>CRISPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
+    <title>CRiSPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
     <link rel="shortcut icon" type="image/jpg" href="Assets/Logos/SoftwareInnovationInstitute.png"/>
 </head>
 
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-warning border-4">
         <div class="container">
             <div class="col-lg-3">
-                <a href="index.html" class="navbar-brand">
+                <a href="" class="navbar-brand">
                     <img src="Assets/Logos/CRISPER_Text_White.svg" alt="CRISPER LOGO WHITE" srcset="" class="img-fluid">
                 </a>
             </div>
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="nav-link">Contact Tracing Map</a>
+                        <a href="contact_tracing_map.html" class="nav-link">Contact Tracing Map</a>
                     </li>                
                     <li class="nav-item">
                         <a href="automated_alerts.html" class="nav-link">Automated Alerts</a>
@@ -66,19 +66,20 @@
                 <div class="col-md-4">
                     <h3>Quick Links</h3>
                     <div class="list-group list-group-flush">
-                        <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Contact Tracing Map</a>
-                        <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a>
+                        <a href="https://mobile.crisper.net.au" class="list-group-item list-group-item-action">Contact Tracing Map</a>
+                        <!-- a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a-->
                         <a href="automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
-                        <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
                         <a href="dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
+                        <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
+                        <br>
+                        <br>
+                    <h3>Other Resources</h3>
 
-                        <br>
-                        <br>
                         <a href="https://covid19nearme.com.au/" class="list-group-item list-group-item-action" target="_blank">COVID-19 Near Me</a>
                         <a href="https://www.covid19data.com.au/" class="list-group-item list-group-item-action" target="_blank">COVID-19 Data</a>
                         <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" class="list-group-item list-group-item-action" target="_blank">Department of Health</a>
                         <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" class="list-group-item list-group-item-action" target="_blank">World Health Organisation</a>
-
+<a></a> <!-- to get a final line -->
 
                       </div>
                 </div>
@@ -88,7 +89,7 @@
                         <div class="row row-cols-1 row-cols-md-2 g-4">
 
                             <div class="col-md-6 col-sm-12">
-                                    <a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
+                                    <a href="contact_tracing_map.html" class="card h-100 my-1 text-decoration-none text-dark" style="width: 100%;">
                                         <div class="ratio ratio-16x9">
                                             <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                                         </div>
@@ -107,7 +108,11 @@
                                     </div>
                                     <div class="card-body">
                                       <h5 class="card-title">Automated Alerts</h5>
-                                      <p class="card-text">Automated Alerts supports daily COVID-19 situation updates for your specific locations of interest. Reports are sent by email. Public data from across Australia's various Departments of Health are utilised.</p>
+                                      <p class="card-text">Automated
+                                Alerts supports daily COVID-19
+                                situation updates for your specific
+                                locations of interest. Reports are
+                                sent by email or displayed online. Public data from across Australia's various Departments of Health are utilised.</p>
                                       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                     </div>
                                 </a>
@@ -120,7 +125,9 @@
                                     </div>
                                     <div class="card-body">
                                       <h5 class="card-title">Other Dashboards</h5>
-                                      <p class="card-text">Find other useful dashboards visualising COVID-19 Data, from National Summary Graphs to Cases by day released by governments.</p>
+                                      <p class="card-text">Other
+                                useful dashboards developed by the
+                                ANU's GRAPHC team for visualising COVID-19 Data, from National Summary Graphs to Cases by day released by governments.</p>
                                       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                     </div>
                                 </a>
@@ -133,7 +140,11 @@
                                     </div>
                                     <div class="card-body">
                                       <h5 class="card-title">Data Engine</h5>
-                                      <p class="card-text">The CRISPER Data Engine is a resource supporting the Automatic Alerts and the Dashboards. The Data Engine provides access to many data sources collected into one place..</p>
+                                      <p class="card-text">The CRISPER
+                                Data Engine is a resource supporting
+                                the Automatic Alerts and the
+                                Dashboards. The Data Engine provides
+                                access to many cleansed data sources collected into one place.</p>
                                       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                     </div>
                                 </a>
@@ -185,22 +196,21 @@
                         Acknowledgements
                     </h6>
                     <p class="text-justify"><small>
-                        Developed by:
                         <ul>
-                            <li>
-                                Software Innovation Institute;
-                            </li>
                             <li>
                                 ANU Research School of Population Health;
                             </li>
                             <li>
-                                ANU GRAPHC
+                                APPRISE;
                             </li>
                             <li>
-                                APPRISE
+                                ANU Software Innovation Institute;
                             </li>
                             <li>
-                                and others . . .
+                                ANU GRAPHC;
+                            </li>
+                            <li>
+			        University of Queensland
                             </li>
                         </ul>                    
                         ANU Software Innovation Institute software engineers, designers, and data scientists include: <br> 
@@ -214,7 +224,7 @@
                     <small>
                         <ul class = "list-unstyled">
                             <li>
-                                +61 2 6125 3195
+                                
                             </li>
                             <li>
                                 support@crisper.net.au
@@ -254,17 +264,17 @@
                     <a href="https://rsph.anu.edu.au/" target="_blank" class="col-md">
                         <img src="Assets/Logos/ANU_Logo_Colour_White.png" alt="ANU Logo" class="img-fluid mx-auto">
                     </a>
+                    <a href="https://sii.anu.edu.au/" target="_blank" class="col-md">
+                        <img src="Assets/Logos/SoftwareInnovationInstitute_White_small.png" alt="SII Logo" class="img-fluid mx-auto w-75">
+                    </a>
+                    <a href="http://graphc.anu.edu.au/" target="_blank" class="col-md">
+                        <img src="Assets/Logos/GRAPHC_Logo_Small.png" alt="GRAPHC Logo" class="img-fluid">
+                    </a>
                     <a href="https://public-health.uq.edu.au/" target="_blank" class="col-md">
                         <img src="Assets/Logos/UQ_Logo_White.png" alt="UQ Logo" class="img-fluid mx-auto">
                     </a>
                     <a href="https://www.apprise.org.au/" target="_blank" class="col-md">
                         <img src="Assets/Logos/APPRISE_logo_white.png" alt="APPRISE Logo" class="img-fluid mx-auto">
-                    <a href="https://sii.anu.edu.au/" target="_blank" class="col-md">
-                        <img src="Assets/Logos/SoftwareInnovationInstitute_White_small.png" alt="SII Logo" class="img-fluid mx-auto w-75">
-                    </a>
-                    </a>
-                    <a href="http://graphc.anu.edu.au/" target="_blank" class="col-md">
-                        <img src="Assets/Logos/GRAPHC_Logo_Small.png" alt="GRAPHC Logo" class="img-fluid">
                     </a>
                 </div>
             </div>
