--- a/automated_alerts.html
+++ b/automated_alerts.html
@@ -101,7 +101,7 @@
             <div class="row row-cols-1 row-cols-md-3 py-5">
 
                     <div class="col-md text-center my-3">
-                        <a class="btn btn-warning btn-lg col-8" href="https://crisper.net.au/user/register" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Register an email for sending alerts">
+                        <a class="btn btn-warning btn-lg col-8" href="/user/register" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Register an email for sending alerts">
                             <b> 
                             Register 
                             </b>
@@ -110,7 +110,7 @@
 
 
                     <div class="col-md text-center my-3">
-                        <a class="btn btn-warning btn-lg col-8" href="https://crisper.net.au/alerts" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Manage the alerts you recieve"> <b>
+                        <a class="btn btn-warning btn-lg col-8" href="/alerts" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Manage the alerts you recieve"> <b>
                                 Manage
                             </b>
                         </a>
@@ -118,7 +118,7 @@
 
 
                     <div class="col-md text-center my-3">
-                        <a class="btn btn-warning btn-lg col-8" href="https://crisper.net.au/demo" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title=" Explore alerts without having to register/login."> <b>
+                        <a class="btn btn-warning btn-lg col-8" href="/demo" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title=" Explore alerts without having to register/login."> <b>
                                 Demo
                             </b> 
                         </a>
