Change order of functionality.

--- a/index.html
+++ b/index.html
@@ -177,14 +177,16 @@
                             spatially explicit real-time information for COVID-19 cases and contact tracing locations in Australia. The system comprises three main components: 
                             <ul>
                                 <li>
-                                    Data Engine
+                                    Data Visualisation
                                 </li>
                                 <li>
-                                    Data Visualisation and Interactive Mapping Tools
-
+                                    Interactive Mapping Tools
                                 </li>
                                 <li>
                                     Automatic Alert System
+                                </li>
+                                <li>
+                                    Data Engine
                                 </li>
                             </ul>
                             This system provides integrated data from multiple sources in one platform which optimises information sharing with public health responders, primary health care practitioners and the general public.
