Add instructions for "installing" as app.

--- a/contact_tracing_map.html
+++ b/contact_tracing_map.html
@@ -69,7 +69,15 @@
 	</iframe>
         <!--img src="Assets/Contact Tracing.png" alt=""-->
 
-    </section>
+	<p>The <a href="https://mobile.crisper.net.au">Contact Tracing
+	Locations Web App</a> for <b>Smart Phones</b> can be installed
+	as an App on your smart phone by loading the URL
+	<i>mobile.crisper.net.au</i> into your browser and then choose
+	to <b>Add to Home Screen</b> (from the browser menu). This
+	will install an icon on your home screen to directly access
+	the App. </p>
+
+	</section>
 
 
     <footer class="p-5 bg-dark text-white border-top border-warning border-4">
