Rename Demo as Explore and move to front.

--- a/automated_alerts.html
+++ b/automated_alerts.html
@@ -119,6 +119,14 @@
             <div class="row row-cols-1 row-cols-md-3 py-5">
 
                     <div class="col-md text-center my-3">
+                        <a class="btn btn-warning btn-lg col-8" href="/demo" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title=" Explore alerts without having to register/login."> <b>
+                                Explore
+                            </b> 
+                        </a>
+                    </div>
+
+
+                    <div class="col-md text-center my-3">
                         <a class="btn btn-warning btn-lg col-8" href="/user/register" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Register an email for sending alerts">
                             <b> 
                             Register 
@@ -131,14 +139,6 @@
                         <a class="btn btn-warning btn-lg col-8" href="/alerts" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Manage the alerts you recieve"> <b>
                                 Manage
                             </b>
-                        </a>
-                    </div>
-
-
-                    <div class="col-md text-center my-3">
-                        <a class="btn btn-warning btn-lg col-8" href="/demo" role="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title=" Explore alerts without having to register/login."> <b>
-                                Demo
-                            </b> 
                         </a>
                     </div>
 
