--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@
                                         </div>
                                         <div class="card-body">
                                         <h5 class="card-title">Contact Tracing Map</h5>
-                                        <p class="card-text">This Web App gathers Exposure Site information from multiple State Government sites and presents the locations on a map.</p>
+                                        <p class="card-text">The Web
+                                    App gathers Exposure Site
+                                    information from multiple State
+                                    Government sites and presents the
+                                    locations on a map. Check for
+                                    yourself to see the locations near
+                                    you and your loved ones.</p>
                                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                         </div>
                                     </a>
@@ -127,7 +133,7 @@
                                       <h5 class="card-title">Other Dashboards</h5>
                                       <p class="card-text">Other
                                 useful dashboards developed by the
-                                ANU's GRAPHC team for visualising COVID-19 Data, from National Summary Graphs to Cases by day released by governments.</p>
+                                ANU's GRAPHC team for visualising COVID-19 Data, from National Summary Graphs to Cases by Day released by governments.</p>
                                       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                     </div>
                                 </a>
@@ -173,17 +179,17 @@
                     </h6>
                     <p class="text-justify">
                         <small>
-                            The COVID-19 Real-time Information System for Preparedness and Epidemic Response (CRISPER) has been developed to provide accurate and 
-                            spatially explicit real-time information for COVID-19 cases and contact tracing locations in Australia. The system comprises three main components: 
+                            The COVID-19 Real-time Information System for Preparedness and Epidemic Response (CRISPER) has been developed to provide transparent and 
+                            spatially explicit real-time information for COVID-19 cases and contact tracing locations in Australia. The system comprises four main components: 
                             <ul>
                                 <li>
-                                    Data Visualisation
+                                    Contact Tracing Map
                                 </li>
                                 <li>
-                                    Interactive Mapping Tools
+                                    Automatic Alerts
                                 </li>
                                 <li>
-                                    Automatic Alert System
+                                    Data Visualisation Dashboards
                                 </li>
                                 <li>
                                     Data Engine
