--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                     information from multiple State
                                     Government sites and presents the
                                     locations on a map. Check for
-                                    yourself to see the locations near
+                                    locations near
                                     you and your loved ones.</p>
                                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                         </div>
