Only link to gov resources.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="row  g-4">
                 <div class="col-md-4">
-                    <h3>Quick Links</h3>
+                    <h3>CRISPER</h3>
                     <div class="list-group list-group-flush">
                         <a href="https://mobile.crisper.net.au" class="list-group-item list-group-item-action">Contact Tracing Map</a>
                         <!-- a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a-->
@@ -73,10 +73,8 @@
                         <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
                         <br>
                         <br>
-                    <h3>Other Resources</h3>
+                    <h3>Resources</h3>
 
-                        <a href="https://covid19nearme.com.au/" class="list-group-item list-group-item-action" target="_blank">COVID-19 Near Me</a>
-                        <a href="https://www.covid19data.com.au/" class="list-group-item list-group-item-action" target="_blank">COVID-19 Data</a>
                         <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" class="list-group-item list-group-item-action" target="_blank">Department of Health</a>
                         <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" class="list-group-item list-group-item-action" target="_blank">World Health Organisation</a>
 <a></a> <!-- to get a final line -->
