Add place hodler for mobile app page.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                         <a href="automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
                         <a href="dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
                         <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
+                        <a href="" class="list-group-item list-group-item-action">Mobile App</a>
                         <br>
                         <br>
                     <h3>Resources</h3>
