--- a/data_engine_tables.html
+++ b/data_engine_tables.html
@@ -5,6 +5,18 @@
   <title>Tables</title>
   <!-- Bootstrap -->
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" />
+      <!-- Header/Footer manager with jquery via https://stackoverflow.com/questions/18712338/make-header-and-footer-files-to-be-included-in-multiple-html-pages -->
+      <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous">
+  </script>
+  <script> 
+      $(function(){
+      $("#header").load("header.html"); 
+      $("#footer").load("footer.html"); 
+      });
+  </script> 
 
   <!-- In-lining styles to avoid needing a separate .css file -->
   <style>
@@ -60,6 +72,8 @@
     </br>
 
   </div>
+
+  <div id="footer"></div>
 
 </body>
 
